--- a/style.css
+++ b/style.css
@@ -1,99 +1,57 @@
 html,
 body{
-	/*height:100%;*/
-	width:100%;
 	background-color:#c1c1c1;
-  font-family: helvetica,arial,verdana,sans-serif;
   margin:0;
   padding:0;
-	color:#eee;
+  font-weight: 100;
+  font-size: 10px;
+  font-family: 'helvetica neue', helvetica,arial,verdana,sans-serif;
+  color:#eee;
 }
 
 html {
-    overflow-x:hidden;
+  overflow-x:hidden;
 }
 
 head{display:block;}
-title{display:block; height:45px; padding:0.4em 2em 0.2em 2em; background-color:#191919; margin:0 auto; font-size:32px; font-weight:bold; color:#fff; box-shadow: 0 5px 20px 0 #000;}
+title{display:block; height:45px; padding:0.4em 2em 0.2em 30px; background-color:#191919; margin:0 auto; font-size:32px; /*font-weight:bold;*/ color:#fff; box-shadow: 0 5px 20px 0 #333;}
 
 body {
-  font-weight: 100;
-}
-
-em {
-  display: block;
-  margin: 2em 2em;
-}
-
-em .date span,
-em .date abbr{
-  font-size: 54px;
-  font-weight: 100;
-  font-style: normal;
-}
-
-em .date {
-  font-size: 0;
-  border: none;
+  padding-left: 3em;
 }
 
 abbr {
   border:none;
-  /*background-color: pink;*/
-}
-abbr:after {
-  /*background-color: powderblue;*/
 }
 
-.box {
-  position: relative;
-  background-color: #fff;
-  max-width: 200px;
-  min-width: 100px;
-  padding: 0 20px 20px 20px;
-  border: 1px solid #ddd;
-  margin:30px;
-  box-shadow: 0 5px 10px 4px rgba(50,50,50,0.3);
+
+em,
+.date span,
+.date abbr{
+  font-size: 58px;
+  font-weight: 100;
+  font-style: normal;
+  overflow: hidden;
+  white-space: nowrap;
+  display: inline;
 }
 
-.type1,
-.type2 {
-  border: 0 solid transparent;
-  border-left-width:3px;
-  margin-left: -17px;
-  padding-left: 14px;
+em {
+  display: block;
+  margin: 1em 0 0.5em 0;
 }
 
-.type1 {
-  border-color: #00CED1;
-}
-
-.type2 {
-  border-color: #00FA9A;
-}
 
 .date {
-  margin:40px 0 20px 0;
+  font-size: 0;
+  border: none;
+  color: #515151;
   font-size: 0;
   font-weight: bold;
   color: #313131;
-  border-bottom: 1px solid #999
+  transform: translateZ(0);
 }
 
-.date span,
-.date abbr {
-  font-size: 16px;
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-em .date abbr,
-em .date span,
-.type2 .date abbr,
-.type2 .date span {
-  display: inline;
-}
 
 .date .extra,
 .date abbr:after {
@@ -109,80 +67,55 @@ em .date span,
   content:'ust';
 }
 
-.date abbr.tues:after {
-  content:'day';
-}
-.date abbr.mar:after {
-  content:'ch';
-}
-
 @media only screen and (max-width: 850px) {
 
   .date .extra,
   .date abbr:after,
   .date .full {
-     /*-moz-transition: opacity 1s ease 0s, font-size 0s ease 0.6s;*/
      -moz-transition: opacity 0.6s ease 0s, letter-spacing 0.6s ease 0s;
      -webkit-transition: opacity 0.6s ease 0s, letter-spacing 0.6s ease 0s;
-    /*font-size: 0;*/
+     transition: opacity 0.6s ease 0s, letter-spacing 0.6s ease 0s;
     opacity: 0 ;
-    /*letter-spacing: -10px;*/
     letter-spacing: -0.67em;
   }
 
 }
-
 
 @media only screen and (min-width: 851px) {
 
   .date .extra,
   .date abbr:after,
   .date .full {
-     /*-moz-transition: opacity 1s ease 0s, font-size 0s ease 0s;*/
      -moz-transition: opacity 0.6s ease 0s, letter-spacing 0.6s ease 0s;
      -webkit-transition: opacity 0.6s ease 0s, letter-spacing 0.6s ease 0s;
-    /*font-size: 16px;*/
+     transition: opacity 0.6s ease 0s, letter-spacing 0.6s ease 0s;
     opacity: 1;
     letter-spacing: 0;
   }
 
 }
 
-.date .sat:before,
-.date .jun:before {
-  background-color: purple;
+
+.desc {
   position: relative;
-  display: inline-block;
-}
-
-.date .sat:before {
-  content:'Sat';
-}
-.date .jun:before {
-  content:'Jun';
-}
-
-.box .desc {
-  position: absolute;
-  left:100%;
-  top:0;
-  margin: 10px 10px 10px 40px;
-  height: 100%;
-  /*width: 100%;*/
-  width: 340px;
-  font-size: 30px;
+  max-width: 500px;
+  min-width: 100px;
+  margin: 0;
+  font-size: 26px;
+  font-weight: 200;
+  line-height: 1.3em;
   color: #fff;
 }
 
 
 .instructions {
   position: relative;
-  margin-top: -3em;
-  left: 840px;
+  margin-top: -1em;
+  left: 820px;
   width: 0;
   border: 0 dashed #999;
   border-right-width: 3px;
-  font-size: 50px;
+  font-size: 54px;
   height: 4.2em;
   color: #A2EDFF; /*#A2EDFF*/ /*#00CED1;*/
 }
@@ -208,7 +141,7 @@ em .date span,
 
 .instructions .full:before,
 .instructions .abbr:after {
-  top: -0.4ex;
+  top: -0.2ex;
 }
 
 .instructions .full:before {
