updated styles for better contrast

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body{
-	background-color:#c1c1c1;
+	background-color:#919191;
   margin:0;
   padding:0;
   font-weight: 100;
@@ -48,7 +48,7 @@ em {
   color: #515151;
   font-size: 0;
   font-weight: bold;
-  color: #313131;
+  color: #212121;
   transform: translateZ(0);
 }
 
@@ -104,7 +104,7 @@ em {
   font-size: 26px;
   font-weight: 200;
   line-height: 1.3em;
-  color: #fff;
+  color: #efefef;
 }
 
 
@@ -113,11 +113,12 @@ em {
   margin-top: -1em;
   left: 820px;
   width: 0;
-  border: 0 dashed #999;
+  border: 0 dashed #696969;
   border-right-width: 3px;
   font-size: 54px;
   height: 4.2em;
-  color: #A2EDFF; /*#A2EDFF*/ /*#00CED1;*/
+  color: #87EBFF; /*#A2EDFF*/ /*#A2EDFF*/ /*#00CED1*/
+  text-shadow: 0 0 1px #55A8B5; /*#3AA0B2;*/
 }
 
 .instructions .full,
